syntax = "proto3";
package cosmonaut.moonloop.moonloop;

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/cosmonaut/moonloop/x/moonloop/types";

// GenesisState defines the moonloop module's genesis state.
message GenesisState {
    // this line is used by starport scaffolding # genesis/proto/state
}
